<resources>
    <string name="app_name">NoFire-aid</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="home">Home</string>
    <string name="count">Count</string>
    <string name="service">Service</string>
    <string name="mine">Mine</string>
    <string name="change_password">Change Password</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="add_phone_num">Add Phone Number</string>
    <string name="modify_mailbox">Modify Mailbox</string>
    <string name="add_email_adds">Add Email</string>
    <string name="common_problem">Common Problem</string>
    <string name="safety_fire_knowledge">Safety Fire Knowledge</string>
    <string name="consumer_hotline">Service Hotline</string>
    <string name="service_agreement">Service Agreement</string>
    <string name="switch_project">Switch Project</string>
    <string name="about_us">About Us</string>
    <string name="quit">QUIT</string>
    <string name="modify_password">Update password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_mailbox">Confirm E-mail Address</string>
    <string name="new_modify_mailbox">New E-mail Address</string>
    <string name="confirm_phone">Confirm mobile phone number</string>
    <string name="new_phone_number">New phone number</string>
    <string name="display_password">Display password</string>
    <string name="forget_password">Forget password</string>
    <string name="login_account">Login account</string>
    <string name="your_position">Your position</string>
    <string name="your_name">Your name</string>
    <string name="your_gender">Your gender</string>
    <string name="your_birthday">Your birthday</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="all_project">All Project</string>
    <string name="confirm_exit">Confirm exit</string>
    <string name="user_exit">Exiting the current account will not synchronize the alarm info</string>
    <string name="logout_user">Logout user?</string>
    <string name="confirm_cancellation">Confirm Cancellation</string>
    <string name="canellation_specification">Logging out of the current account will lose all administrative</string>
    <string name="select_units">Select Units</string>
    <string name="select_area">Select Area</string>
    <string name="select_place">Select Place</string>
    <string name="web_view_title_question">Details</string>
    <string name="install">Installation</string>
    <string name="records">Records</string>
    <string name="videos">Video information</string>
    <string name="project_message">Project information</string>
    <string name="device_list">Device List</string>
    <string name="place_list">Place List</string>
    <string name="area_list">Area List</string>
    <string name="infrastructure">Infrastructure</string>
    <string name="users_list">Users List</string>
    <string name="user_id">User ID</string>
    <string name="users_name">User Name</string>
    <string name="users_state">Logging</string>
    <string name="user_info">Userinfo</string>
    <string name="task_detail">Task Datail</string>
    <string name="inspection_point">Inspection Point</string>
    <string name="patrol_project">Project</string>
    <string name="clock_time">Clock Time</string>
    <string name="task_list">Task List</string>
    <string name="tag_position">Location</string>
    <string name="task_no_started">NotStarted</string>
    <string name="task_under_way">InProgress</string>
    <string name="task_off_the_stocks">Completed</string>
    <string name="task_unfinished">NotCompleted</string>
    <string name="task_expired">Expired</string>
    <string name="task_clock_in">Clock In</string>
    <string name="scan_nfc">NFC</string>
    <string name="scan_qr_code">QR Code</string>
    <string name="patrol_task">Patrol Task</string>
    <string name="task_time_limit">Time</string>
    <string name="patrol_progress">Progress</string>
    <string name="inspectors">Inspectors</string>
    <string name="scan_search">ScanSearch</string>
    <string name="inspection_method">Inspect way</string>
    <string name="tap_all">All</string>
    <string name="tap_task_dns">DNS</string>
    <string name="tap_task_doing">Doing</string>
    <string name="tap_task_done">Done</string>
    <string name="tap_task_stale">Stale</string>
    <string name="point_add">ADD</string>
    <string name="point_change">Change</string>
    <string name="point_finish">Finish</string>
    <string name="point_list">Point List</string>
    <string name="add_point">Add Task Point</string>
    <string name="change_point">Change Task Point</string>
    <string name="point_name">Point Name</string>
    <string name="point_location">Location</string>
    <string name="point_detail">Check Point Details</string>
    <string name="patrol_type">Patrol item type</string>
    <string name="patrol_made_date">Made Date</string>
    <string name="patrol_start_date">Date Used</string>
    <string name="sign_in_type">Sign in type</string>
    <string name="work_check_all">Qualified</string>
    <string name="work_check_normal_or_warn">Normal/Abnormal</string>
    <string name="work_state_normal">Normal</string>
    <string name="work_state_warn">Abnormal</string>
    <string name="work_state_unchecked">Unchecked</string>
    <string name="point_unqualified_records">Unqualified Records</string>
    <string name="point_qualified_records">Qualified Records</string>
    <string name="submit_task">SUBMIT</string>
    <string name="add_picture">Add Picture</string>
    <string name="submit_error_message">Abnormal Information</string>
    <string name="stick">Stick</string>
    <string name="string_alert_project">Fire Unit :</string>
    <string name="string_alert_place">Alarm Place :</string>
    <string name="string_alert_installation">Alarm location :</string>
    <string name="string_alert_device_type">Device Type :</string>
    <string name="string_alert_linkman">Contacts :</string>
    <string name="string_device_adapter_title">Subdevice list :</string>
    <string name="string_device_adapter_state">Subdevice status :</string>
    <string name="string_alert_project_name">Unit :</string>
    <string name="string_alert_area_name">Area :</string>
    <string name="string_alert_place_name">Place :</string>
    <string name="string_alert_time">Time :</string>
    <string name="string_alert_fire_title">Fire detail</string>
    <string name="string_alert_prefire_title">Warning details</string>
    <string name="string_alert_alert_type">Fire alarm types :</string>
    <string name="string_alert_happen_time">Happen time :</string>
    <string name="string_alert_device_install">Install location :</string>
    <string name="string_alert_reviewer">reviewer :</string>
    <string name="string_alert_review_time">Review time :</string>
    <string name="string_alert_review_result">Review result :</string>
    <string name="common_string_switch_project">Switch Project</string>
    <string name="string_alert_floor_plan">Fire alarm location</string>
    <string name="string_alert_video">Video linkage</string>
    <string name="string_alert_device_detail">Device details</string>
    <string name="string_alarm_false_count">Count off by mistake :</string>
    <string name="detail_description">Description</string>
    <string name="detail_patrol_note">Note</string>
    <string name="detail_pictures">Pictures</string>
    <string name="histroy_details">Histroy Details</string>
    <string name="device_message">Device Message</string>
    <string name="device_details">Device Detail</string>
    <string name="device_install_details">Install Details</string>
    <string name="device_base_information">Information</string>
    <string name="belongs_place">Belongs Place</string>
    <string name="device_default_place">The default location</string>
    <string name="device_plan">Device Plan</string>
    <string name="device_accessory">Add Accessory</string>
    <string name="accessory">Accessory</string>
    <string name="device_record">Record</string>
    <string name="device_video">Video</string>
    <string name="device_photograph">Photo</string>
    <string name="device_picture">picture</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="long_click_delete">Long press delete</string>
    <string name="device_assign">Allocate Device</string>
    <string name="device_unallocated">Unallocated</string>
    <string name="device_allocated">Allocated</string>
    <string name="device_install_list">Install list</string>
    <string name="fire_detection_and_alarm_system">Fire detection and alarm systems</string>
    <string name="device_allocation_type">Type of distribution</string>
    <string name="device_allocation_type_msg">Whether gateways and devices are allocated in batches!</string>
    <string name="device_allocation_type_right">Separate distribution</string>
    <string name="device_allocation_type_left">Mass distribution</string>
    <string name="device_allocation_type_gateway_msg">Whether to update all devices under the gateway!</string>
    <string name="device_allocation_type_gateway_left">All devices</string>
    <string name="device_allocation_type_gateway_right">Unallocated</string>
    <string name="string_channel_title">Channel List</string>
    <string name="channels_add">Add channel</string>
    <string name="channels_edit">Edit channel</string>
    <string name="channels_type">Channel type</string>
    <string name="home_add_user">User</string>
    <string name="home_entry_point">Point</string>
    <string name="home_task">Task</string>
    <string name="home_device">Device</string>
    <string name="fire_unit">Fire Unit</string>
    <string name="fire_area">Fire Area</string>
    <string name="fire_venue">Fire Venue</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="alarm_status">Alarm State</string>
    <string name="review">Review</string>
    <string name="fire_point">Fire alarm</string>
    <string name="fire_video">Monitoring</string>
    <string name="alarm_device">Fire Device</string>
    <string name="ellipsis">... ...</string>
    <string name="coming_soon">Coming soon"</string>
    <string name="hint_null_lcation">Please select the location.</string>
    <string name="title_profile_picture">Profile picture :</string>
    <string name="title_login_id">Login ID :</string>
    <string name="title_position">Position :</string>
    <string name="title_user_name">Username :</string>
    <string name="title_sex">Sex :</string>
    <string name="title_birthday">Date Of Birth :</string>
    <string name="title_mobile_phone">Mobile Phone :</string>
    <string name="title_email_address">Email Address :</string>
    <string name="title_copyright_information">Copyright :</string>
    <string name="title_device_system">Belong to :</string>
    <string name="title_installation">Installation :</string>
    <string name="check_new_version">Updates</string>
    <string name="current_version">Version :</string>
    <string name="us_info">\u3000\u3000Know eye fire online APP is a high-risk places fire control facilities for monitoring applications, for networking, head of the unit, as well as the subordinate grid (region, place) the wisdom of the head to provide professional, comprehensive fire protection solutions.Can carry on the real-time monitoring to alert status through camera, based on the real situation to review of industry, but also can carry on the supervision report to the hidden trouble.Record the whole process, and can realize fire operations and fire data integration and intelligent analysis.</string>
</resources>