<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    style="@style/style_item_card_view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_task"
            android:text="@string/home_task"
            android:visibility="invisible"
            android:drawableTop="@mipmap/ic_task"
            style="@style/home_title" />
        <TextView
            android:id="@+id/tv_title_device"
            android:text="@string/home_device"
            android:visibility="invisible"
            android:drawableTop="@mipmap/ic_device"
            style="@style/home_title" />
        <TextView
            android:id="@+id/tv_title_add_user"
            android:text="@string/home_add_user"
            android:visibility="invisible"
            android:drawableTop="@mipmap/ic_add_user"
            style="@style/home_title" />
        <TextView
            android:id="@+id/tv_title_entry_point"
            android:text="@string/home_entry_point"
            android:visibility="invisible"
            android:drawableTop="@mipmap/ic_entry_point"
            style="@style/home_title" />

    </LinearLayout>
</android.support.v7.widget.CardView>