<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_review_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            style="@style/style_item_card_view">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_pading"
                android:layout_marginBottom="@dimen/card_pading">

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_pading"
                    android:drawableTop="@mipmap/ic_blue_location"
                    android:text="1.8km"
                    android:textColor="@color/color_blue_location" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_fire_unit"
                        style="@style/text_item_end"
                        android:layout_marginLeft="@dimen/text_least"
                        android:text="@string/fire_unit" />

                    <TextView
                        android:id="@+id/tv_fire_area"
                        style="@style/text_item_end"
                        android:layout_marginLeft="@dimen/text_least"
                        android:text="@string/fire_area" />

                    <TextView
                        android:id="@+id/tv_fire_venue"
                        style="@style/text_item_end"
                        android:layout_marginLeft="@dimen/text_least"
                        android:text="@string/fire_venue" />

                    <TextView
                        android:id="@+id/tv_alarm_time"
                        style="@style/text_item_end"
                        android:layout_marginLeft="@dimen/text_least"
                        android:text="@string/alarm_time" />

                    <TextView
                        android:id="@+id/tv_alarm_status"
                        style="@style/text_item_end"
                        android:layout_marginLeft="@dimen/text_least"
                        android:text="@string/alarm_status" />

                    <View
                        style="@style/line_f0_1px"
                        android:layout_marginLeft="@dimen/text_least"
                        android:layout_marginTop="@dimen/card_margin"
                        android:layout_marginRight="@dimen/text_least" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/text_least"
                        android:layout_marginBottom="@dimen/card_margin"
                        android:src="@mipmap/ic_more" />
                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <include
            layout="@layout/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_btn_fire" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/mine_head_height"
            android:background="@drawable/red_button_24dp"
            android:paddingLeft="@dimen/mine_head_src"
            android:paddingRight="@dimen/mine_head_src"
            android:text="@string/review"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp" />

        <LinearLayout
            android:id="@+id/ll_btn_fire"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_wechat_height"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/tv_fire_point"
                style="@style/text_bottm_tab"
                android:text="@string/fire_point" />

            <View
                style="@style/line_stand_1px"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin" />

            <TextView
                android:id="@+id/tv_fire_video"
                style="@style/text_bottm_tab"
                android:text="@string/fire_video" />

            <View
                style="@style/line_stand_1px"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin" />

            <TextView
                android:id="@+id/tv_fire_device"
                style="@style/text_bottm_tab"
                android:text="@string/alarm_device" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>